@@ -5,6 +5,7 @@ import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.BinaryOperator;
 
 /**
  * Which values each position may hold, over all the rules a reading took in.
@@ -42,6 +43,18 @@ import java.util.Set;
  * questions and are kept apart: {@link #at} says which values, {@link #speaksFor} says whether that
  * is the whole of what the rules leave.
  *
+ * <p>What a position holds is answered from two sides. {@link #at} is an upper approximation and
+ * {@link #guaranteedAt} a lower one, and between them sits what the rules truly leave:
+ *
+ * <pre>
+ *     guaranteedAt(p)   &#8838;   what is truly admitted at p   &#8838;   at(p)
+ * </pre>
+ *
+ * <p>The lower one is what a choice needs. An alternative that admits every value at a position
+ * settles it however little was read beside it, and a reading holding only "something went unread"
+ * has thrown away what it would take to know that — which is why the two ends are carried and not
+ * a flag standing for their difference.
+ *
  * <p>Two things spoil it, and the second is the one that is easy to miss.
  *
  * <p>A rule this could not read spoils the positions it names, and what stopped it travels with
@@ -55,22 +68,53 @@ import java.util.Set;
  * arrived at that way is not the ANY of a position nothing was written about. Without this a
  * position would be reported as one the model draws no distinction at, when what happened is that
  * this reading could not follow the distinction the model draws.
+ *
+ * <p>Unless the alternatives already cover the position, which is the one thing that stops it.
+ * {@code (value == "A" || value /= "A") || opaque()} leaves nothing for the unread branch to take
+ * back: the two that were read admit every value between them, and a choice one of whose
+ * alternatives admits every value at a position admits every value at it. That is what
+ * {@link #guaranteedAt} is carried for, and holding "something went unread" alone would answer the
+ * same clause two ways depending on where its brackets fell.
  */
-public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> unread,
-                                  boolean dropped, boolean nothing) {
+public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> standing,
+                                  boolean dropped, boolean nothing,
+                                  Map<A, ValueSet> guaranteed, ValueSet defaultGuaranteed,
+                                  boolean guaranteedTogether) {
 
     /**
      * @param values  what each position admits. A position at {@link ValueSet#ANY} is left out, so
      *                that what is held is what was said
-     * @param unread  the positions this reading cannot speak for, each with what stopped it. Why
-     *                and not only which: two of these are lifted by different work and reported
-     *                differently, and a reader handed the positions alone would have to go back to
-     *                the rules to find out which it was
+     * @param standing what a rule left standing at each position, and what stopped the reading
+     *                from taking it in. Why and not only which: two of these are lifted by
+     *                different work and reported differently, and a reader handed the positions
+     *                alone would have to go back to the rules to find out which it was.
+     *
+     *                <p><b>Not the positions this cannot speak for.</b> A rule left standing where
+     *                the alternatives cover the position between them is one nothing there is
+     *                answerable for, and it is held all the same, since whether they still cover it
+     *                turns on rules stated beside the choice that have not been read yet.
+     *                {@link #speaksFor} and {@link #whyUnread} are the readings; this is what they
+     *                are read from
      * @param dropped whether a rule was left unread anywhere in this reading, which is what a
      *                disjunction needs in order to know that a branch widened it. What stopped that
      *                rule is not carried: a position the other branch spoke about is spoiled by
      *                there having been an alternative it could not read, and not by whatever the
      *                rule in that alternative was about
+     * @param guaranteed which values each position is guaranteed to admit — read through
+     *                {@link #guaranteedAt} rather than off this map, which holds a position whose
+     *                guarantee is the default as well. Held that way on purpose: the keys are
+     *                {@link #promisedAt}, the positions a rule of this reading reached, and
+     *                dropping the ones that came to the default would make that set turn on which
+     *                rules happened to leave a position where it started. A choice reads it twice
+     *                over, and both readings would follow the brackets
+     * @param defaultGuaranteed what a position this holds no guarantee for is guaranteed to admit.
+     *                Not {@link #dropped} said another way: {@code value == 5} joined with a rule
+     *                nothing could read has this at {@link ValueSet#ANY} and {@code dropped} set,
+     *                because the alternative that was read guarantees every value at every position
+     *                it says nothing about, while a rule of the choice did go unread
+     * @param guaranteedTogether whether one value may be taken from each position's guarantee and
+     *                the whole of them stand together in this reading. What a conjunction needs of
+     *                its sides and what a choice over more than one position does not leave
      */
     public AdmissibleValues {
         Map<A, ValueSet> said = new LinkedHashMap<>();
@@ -83,12 +127,67 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
         // written out of these has to come out the same on two runs of the compiler, and the
         // iteration order of an immutable copy does not.
         values = Collections.unmodifiableMap(said);
-        unread = Collections.unmodifiableMap(new LinkedHashMap<>(unread));
+        standing = Collections.unmodifiableMap(new LinkedHashMap<>(standing));
+        // A guarantee empty at one position is empty at all of them. What is held is one set per
+        // position standing for the product of them, and a product with an empty side is empty —
+        // so there is no value at any position that this can promise. This is also where a reading
+        // that admits nothing arrives, by whichever way it got there: a leaf left no value, two
+        // rules that cannot both hold, a caller that showed it from outside.
+        if (nothing || said.values().stream().anyMatch(ValueSet::isEmpty)
+                || defaultGuaranteed.isEmpty() || guaranteed.values().stream()
+                        .anyMatch(ValueSet::isEmpty)) {
+            guaranteed = Map.of();
+            defaultGuaranteed = ValueSet.NONE;
+            guaranteedTogether = true;
+        }
+        guaranteed = Collections.unmodifiableMap(new LinkedHashMap<>(guaranteed));
+    }
+
+    /**
+     * Which values this reading can guarantee are admitted at {@code atom}, however much the rules
+     * it could not read turn out to exclude.
+     *
+     * <p>A lower approximation where {@link #at} is an upper one, and equal to it at a position
+     * this says that nothing left unread is why the answer is as wide as it is — which is what
+     * {@link #speaksFor} is read from. It does not say the
+     * answer is what the model leaves: a rule reaching across two positions is read here one
+     * position at a time, so what is reported can be wider than the rules are with every rule read.
+     *
+     * <p><b>A choice composes these and a conjunction promises nothing.</b> Either alternative of a
+     * choice holding is enough, so what the two of them promise a position is what either does, and
+     * that is read at the position — {@code (value == 5 || value /= 5) || anything} promises every
+     * value at {@code value}, whichever way its alternatives are bracketed.
+     *
+     * <p>A conjunction may compose them only where both sides promise their positions together, and
+     * the limit is the representation's rather than the connective's. What is held is one set per
+     * position standing for the product of them, and a choice over more than one position leaves no
+     * such product: {@code (a == 5 && b == 0) || (a /= 5 && b == 1)} leaves {@code a} at every value
+     * and {@code b} at two, which as a product holds {@code a = 5, b = 1} — a pair neither
+     * alternative stands for. Met with a rule admitting only {@code b = 0}, sets like that would say
+     * {@code a} is still free while the rules hold it to 5. So {@link #guaranteedTogether} says
+     * whether the promise is one about whole values, and a conjunction promises nothing where it is
+     * not.
+     *
+     * <p>Which is why {@link #speaksFor} is not answered from these under a conjunction either. A
+     * rule stated beside others narrows rather than widens, so what an unread one costs there is
+     * answered by the positions it names, and that is the account {@link #standing} has kept all
+     * along.
+     *
+     * <p><b>What that costs is a promise, and it is paid across the whole value.</b> A conjunction
+     * with a part nothing could read promises nothing anywhere, so a position covered inside one
+     * clause is reported short of its rules once any clause of the same value goes unread —
+     * {@code invariant said = (n == 5 || n /= 5) || f(n)} beside {@code invariant apart = g(m)}
+     * leaves {@code n} partial, though nothing about {@code n} is what {@code g(m)} could narrow.
+     * Telling the two apart wants a reading that remembers why it promises nothing, which is more
+     * than a promise and less than this holds.
+     */
+    public ValueSet guaranteedAt(A atom) {
+        return guaranteed.getOrDefault(atom, defaultGuaranteed);
     }
 
     /** Nothing read and nothing missed, which is what a reading starts from. */
     public static <A> AdmissibleValues<A> top() {
-        return new AdmissibleValues<>(Map.of(), Map.of(), false, false);
+        return new AdmissibleValues<>(Map.of(), Map.of(), false, false, Map.of(), ValueSet.ANY, true);
     }
 
     /**
@@ -100,12 +199,13 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
      */
     public AdmissibleValues<A> leavingNothing() {
         return isBottom() ? this
-                : new AdmissibleValues<>(Map.of(), unread, dropped, true);
+                : new AdmissibleValues<>(Map.of(), standing, dropped, true, Map.of(), ValueSet.NONE, true);
     }
 
     /** One position said to admit {@code set}, and nothing missed. */
     public static <A> AdmissibleValues<A> at(A atom, ValueSet set) {
-        return new AdmissibleValues<>(Map.of(atom, set), Map.of(), false, false);
+        return new AdmissibleValues<>(Map.of(atom, set), Map.of(), false, false,
+                Map.of(atom, set), ValueSet.ANY, true);
     }
 
     /**
@@ -118,7 +218,10 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
     public static <A> AdmissibleValues<A> unreadable(Set<A> named, UnreadReason why) {
         Map<A, UnreadReason> spoiled = new LinkedHashMap<>();
         named.forEach(each -> spoiled.put(each, why));
-        return new AdmissibleValues<>(Map.of(), spoiled, true, false);
+        // Nothing is guaranteed anywhere, and at the positions it does not name as much as at the
+        // ones it does: what a rule this has no word for admits is not known, so a choice offering
+        // it as an alternative is offering nothing that can be counted on.
+        return new AdmissibleValues<>(Map.of(), spoiled, true, false, Map.of(), ValueSet.NONE, true);
     }
 
     /** What {@code atom} may hold, everything being admitted where nothing was said. */
@@ -129,14 +232,25 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
     /**
      * Whether {@link #at} is the whole of what the rules leave {@code atom}, rather than a wider
      * answer this reading could not narrow.
+     *
+     * <p>Either nothing was left standing at the position, or what was left standing cannot be
+     * answerable for the answer's width: the two ends meet there, so every value reported is one
+     * this reading can promise and there is nothing between them for an unread rule to have been.
+     *
+     * <p><b>Asked of the reading in hand and not settled where a rule was left standing.</b> What an
+     * alternative covers is what that alternative admits, and a rule stated beside the choice may
+     * leave nothing of the alternative that did the covering. In {@code (a == 5 || a /= b) && a == 7}
+     * the first alternative admits every {@code b}, and the second rule refuses every value it
+     * admits — so what covered {@code b} is gone, and a reading that had already struck the rule off
+     * would answer that the model leaves {@code b} every value.
      */
     public boolean speaksFor(A atom) {
-        return !unread.containsKey(atom);
+        return !standing.containsKey(atom) || guaranteedAt(atom).equals(at(atom));
     }
 
     /** What stopped this reading from speaking for {@code atom}, or null where nothing did. */
     public UnreadReason whyUnread(A atom) {
-        return unread.get(atom);
+        return speaksFor(atom) ? null : standing.get(atom);
     }
 
     /** Whether nothing satisfies these rules, at a position or otherwise. */
@@ -148,8 +262,21 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
     public AdmissibleValues<A> meet(AdmissibleValues<A> other) {
         Map<A, ValueSet> out = new LinkedHashMap<>(values);
         other.values.forEach((atom, set) -> out.merge(atom, set, ValueSet::meet));
-        return new AdmissibleValues<>(out, union(unread, other.unread),
-                dropped || other.dropped, nothing || other.nothing);
+        // Promising what both sides promise, where both promise their positions together. Where
+        // one of them does not, the sets it holds are each true of some value and of no one value
+        // at once, and met they would promise a combination neither reading has — so the
+        // conjunction promises nothing. See {@link #guaranteedAt}.
+        boolean apart = !guaranteedTogether || !other.guaranteedTogether;
+        // Either way what comes out is a promise about whole values, which is why a conjunction
+        // never has to say it is not one. Two of them met is one — a value taken from each
+        // position of both stands in both readings — and nothing promised is one for want of
+        // anything to promise.
+        return new AdmissibleValues<>(out, union(standing, other.standing),
+                dropped || other.dropped, nothing || other.nothing,
+                apart ? Map.of() : guaranteedBy(guaranteed, defaultGuaranteed,
+                        other.guaranteed, other.defaultGuaranteed, ValueSet::meet),
+                apart ? ValueSet.NONE : defaultGuaranteed.meet(other.defaultGuaranteed),
+                true);
     }
 
     /**
@@ -174,8 +301,8 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
                     both.put(atom, set);
                 }
             });
-            return new AdmissibleValues<>(both, union(unread, other.unread),
-                    dropped || other.dropped, true);
+            return new AdmissibleValues<>(both, union(standing, other.standing),
+                    dropped || other.dropped, true, Map.of(), ValueSet.NONE, true);
         }
         if (isBottom()) {
             return other;
@@ -190,18 +317,76 @@ public record AdmissibleValues<A>(Map<A, ValueSet> values, Map<A, UnreadReason> 
                 out.put(atom, set.join(there));
             }
         });
-        Map<A, UnreadReason> spoiled = union(unread, other.unread);
+        // What the alternatives guarantee between them, which is what settles whether anything is
+        // left for an unread rule to have widened.
+        Map<A, ValueSet> covered = guaranteedBy(guaranteed, defaultGuaranteed,
+                other.guaranteed, other.defaultGuaranteed, ValueSet::join);
+        ValueSet coveredElsewhere = defaultGuaranteed.join(other.defaultGuaranteed);
+        Map<A, UnreadReason> spoiled = union(standing, other.standing);
         // Spoiled by there having been an alternative this could not read, which is what happened
         // to them: a value satisfying that branch is under no obligation from this one. Not by what
         // the unread rule was about — a rule relating two other positions relates this one to
         // nothing, and lending its reason here would say that it did.
         if (other.dropped) {
-            spoiled = spoiling(spoiled, values.keySet());
+            spoiled = spoiling(spoiled, promisedAt());
         }
         if (dropped) {
-            spoiled = spoiling(spoiled, other.values.keySet());
+            spoiled = spoiling(spoiled, other.promisedAt());
         }
-        return new AdmissibleValues<>(out, spoiled, dropped || other.dropped, false);
+        // What each rule left standing is kept whole. Whether a position is answerable for it is
+        // read off the two ends where the question is asked ({@link #speaksFor}) rather than
+        // settled here: what covers a position is an alternative, and a rule stated beside the
+        // choice may leave nothing of that alternative.
+        Set<A> shapedBy = new LinkedHashSet<>(promisedAt());
+        shapedBy.addAll(other.promisedAt());
+        // A union of two products alike everywhere but at one place is the product with that place
+        // widened, so the promise survives as one about whole values where the alternatives are
+        // written at no more than one position between them. Anywhere else the union holds a value
+        // from one alternative at one position beside a value from the other at another, which is a
+        // combination neither of them stands for.
+        //
+        // Sufficient and not necessary, and deliberately so. A union is also a product where one
+        // alternative promises everything the other does, and where the two differ at only one
+        // position however many they are written at — and both of those compare the two boxes a
+        // bracketing happened to put together, so a choice of three alternatives answers one way
+        // written to the left and another to the right. Measured: both were tried and both broke
+        // `AChoiceIsOneConnectiveAndNotATree`. Coarse and the same either way is the trade, and
+        // what it costs is a promise this could have kept rather than one it could not.
+        return new AdmissibleValues<>(out, spoiled, dropped || other.dropped, false,
+                covered, coveredElsewhere,
+                guaranteedTogether && other.guaranteedTogether && shapedBy.size() <= 1);
+    }
+
+    /** What both sides guarantee, at every position either of them holds a guarantee for, each
+     *  side missing one standing at its own default. */
+    private static <A> Map<A, ValueSet> guaranteedBy(Map<A, ValueSet> these, ValueSet theseElse,
+                                                     Map<A, ValueSet> those, ValueSet thoseElse,
+                                                     BinaryOperator<ValueSet> both) {
+        Set<A> named = new LinkedHashSet<>(these.keySet());
+        named.addAll(those.keySet());
+        Map<A, ValueSet> out = new LinkedHashMap<>();
+        named.forEach(each -> out.put(each, both.apply(these.getOrDefault(each, theseElse),
+                those.getOrDefault(each, thoseElse))));
+        return out;
+    }
+
+    /**
+     * The positions an alternative beside this one may have widened.
+     *
+     * <p>Every position this reading's promise is written at, which is every position a rule of it
+     * reached — narrowed there or not. Not the positions it narrows: a branch that read two rules
+     * and came out admitting every value at a position narrows nothing there and had rules about it
+     * all the same, and which of the two a branch looks like turns on where the brackets of the
+     * choice fell. Asked of what a reading is about rather than of what it managed, the answer is
+     * the same either way.
+     *
+     * <p>These are candidates and not the answer. What is recorded against them is that an
+     * alternative went unread beside them; whether that is anything the position is answerable for
+     * is settled by {@link #speaksFor}, which reads it off the two ends where the question is asked.
+     * A position the alternatives cover between them carries a reason nobody is ever shown.
+     */
+    private Set<A> promisedAt() {
+        return guaranteed.keySet();
     }
 
     /** The same, with {@code these} left open by an alternative — where nothing has spoiled them
